Flicker debugging: subtract off an exponential fit and look at residuals.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
@@ -119,12 +119,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 920\n",
-    "pos = 0\n",
+    "idx = 22  # 135#920\n",
+    "pos = 2\n",
     "regionprops = data[nd2_filename][pos][\"regionprops\"]\n",
     "seg_frame = np.asarray(data[nd2_filename][pos][\"segmentation_frame\"])\n",
     "label_frame = np.asarray(data[nd2_filename][pos][\"labels\"])\n",
-    "y, x = regionprops.iloc[idx, :][[\"centroid_x\", \"centroid_y\"]]\n",
+    "y, x = regionprops.loc[idx, :][[\"centroid_x\", \"centroid_y\"]]\n",
     "s = 10\n",
     "x_lim = y_lim = 2048\n",
     "x, y = int(x), int(y)\n",
@@ -147,11 +147,11 @@
     "hv.HoloMap(\n",
     "    {\n",
     "        t: hv.Image(\n",
-    "            segmentation.get_nd2_frame(nd2_filename, 0, channel, t)[\n",
+    "            segmentation.get_nd2_frame(nd2_filename, 0, channel, t, memmap=True)[\n",
     "                y_min:y_max, x_min:x_max\n",
     "            ]\n",
     "        )\n",
-    "        for t in range(0, t_max // 10, 1)\n",
+    "        for t in range(100, 160, 1)\n",
     "    }\n",
     ")"
    ]
@@ -162,7 +162,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.asarray(data[nd2_filename][0][\"traces\"][\"mean\"]).T[:, 920])"
+    "def func1(x, a, b, c):\n",
+    "    return a * np.exp(-b * x) + c\n",
+    "\n",
+    "\n",
+    "def exp_fit(trace):\n",
+    "    y = trace / trace[0]\n",
+    "    ts = np.arange(y.shape[0])\n",
+    "    mask = np.isfinite(y)\n",
+    "    y_finite = y[mask]\n",
+    "    y_min = y_finite.min()\n",
+    "    p, _ = scipy.optimize.curve_fit(\n",
+    "        func1, ts[mask], y_finite, p0=[y_finite[0] - y_min, 0.001, y_min]\n",
+    "    )\n",
+    "    fy = func1(ts, *p)\n",
+    "    return fy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = np.asarray(data[nd2_filename][pos][\"traces\"][\"mean\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = d[idx] / d[idx, 0]\n",
+    "fy = exp_fit(y)\n",
+    "plt.plot(y)\n",
+    "plt.plot(fy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        idx: hv.Curve(d[idx] / d[idx, 0] - exp_fit(d[idx]))\n",
+    "        for idx in range(1, d.shape[0] // 5)\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "hv.HoloMap({idx: hv.Curve(d[idx] / d[idx, 0]) for idx in range(1, d.shape[0] // 5)})"
    ]
   },
   {
@@ -203,85 +263,6 @@
     "plt.plot(np.asarray(data[nd2_filename][0][\"traces\"][\"mean\"]).T[:, 1])\n",
     "plt.plot(np.asarray(data[nd2_filename][0][\"traces\"][\"mean\"]).T[:, 500])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    np.asarray(\n",
-    "        data[\"/n/scratch2/jqs1/190507/mkate_100ms_50pct.nd2\"][0][\"traces\"][\"mean\"]\n",
-    "    ).T[:, :5]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    np.asarray(\n",
-    "        data[\"/n/scratch2/jqs1/190507/mkate_100ms_50pct.nd2\"][0][\"traces\"][\"median\"]\n",
-    "    ).T[:, :10]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%output size=200\n",
-    "hv.Image(\n",
-    "    np.asarray(\n",
-    "        data[\"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"][0][\n",
-    "            \"segmentation_frame\"\n",
-    "        ]\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = segmentation.get_nd2_reader(\n",
-    "    \"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%output size=200\n",
-    "hv.HoloMap({t: hv.Image(nd2.get_frame_2D(v=0, t=t)) for t in range(5)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_graph[\"/n/scratch2/jqs1/190411/Noah_Runs/GFP_100ms_100pct_0001.nd2\"][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
