Plot spatial patterns of flicker.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
@@ -72,6 +72,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func1(x, a, b, c):\n",
+    "    return a * np.exp(-b * x) + c\n",
+    "\n",
+    "\n",
+    "def exp_fit(trace):\n",
+    "    y = trace / trace[0]\n",
+    "    ts = np.arange(y.shape[0])\n",
+    "    mask = np.isfinite(y)\n",
+    "    y_finite = y[mask]\n",
+    "    y_min = y_finite.min()\n",
+    "    p, _ = scipy.optimize.curve_fit(\n",
+    "        func1, ts[mask], y_finite, p0=[y_finite[0] - y_min, 0.001, y_min]\n",
+    "    )\n",
+    "    fy = func1(ts, *p)\n",
+    "    return fy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load data"
    ]
   },
@@ -109,18 +139,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_filename = \"/n/scratch2/jqs1/190508/GFP_100ms_20pct.nd2\"\n",
-    "channel = \"FITC\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = 22  # 135#920\n",
-    "pos = 2\n",
+    "nd2_filename = \"/n/scratch2/jqs1/190508/GFP_100ms_100pct.nd2\"\n",
+    "channel = \"FITC\"\n",
+    "# nd2_filename = '/n/scratch2/jqs1/190507/mkate_100ms_100pct.nd2'\n",
+    "# channel = 'mCherry'\n",
+    "idx = 91\n",
+    "pos = 1\n",
+    "d = np.asarray(data[nd2_filename][pos][\"traces\"][\"mean\"])\n",
     "regionprops = data[nd2_filename][pos][\"regionprops\"]\n",
     "seg_frame = np.asarray(data[nd2_filename][pos][\"segmentation_frame\"])\n",
     "label_frame = np.asarray(data[nd2_filename][pos][\"labels\"])\n",
@@ -132,7 +157,7 @@
     "x_max = min(x + s, x_lim)\n",
     "y_min = max(y - s, 0)\n",
     "y_max = min(y + s, y_lim)\n",
-    "t_max = data[nd2_filename][pos][\"traces\"][\"mean\"].shape[1]\n",
+    "t_max = d.shape[1]\n",
     "seg = seg_frame[y_min:y_max, x_min:x_max]\n",
     "labels = label_frame[y_min:y_max, x_min:x_max]"
    ]
@@ -143,17 +168,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output max_frames=2000\n",
-    "hv.HoloMap(\n",
-    "    {\n",
-    "        t: hv.Image(\n",
-    "            segmentation.get_nd2_frame(nd2_filename, 0, channel, t, memmap=True)[\n",
-    "                y_min:y_max, x_min:x_max\n",
-    "            ]\n",
-    "        )\n",
-    "        for t in range(100, 160, 1)\n",
-    "    }\n",
-    ")"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(seg_frame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Browse traces"
    ]
   },
   {
@@ -162,42 +185,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func1(x, a, b, c):\n",
-    "    return a * np.exp(-b * x) + c\n",
-    "\n",
-    "\n",
-    "def exp_fit(trace):\n",
-    "    y = trace / trace[0]\n",
-    "    ts = np.arange(y.shape[0])\n",
-    "    mask = np.isfinite(y)\n",
-    "    y_finite = y[mask]\n",
-    "    y_min = y_finite.min()\n",
-    "    p, _ = scipy.optimize.curve_fit(\n",
-    "        func1, ts[mask], y_finite, p0=[y_finite[0] - y_min, 0.001, y_min]\n",
-    "    )\n",
-    "    fy = func1(ts, *p)\n",
-    "    return fy"
+    "%%output size=200\n",
+    "hv.HoloMap({idx: hv.Curve(d[idx] / d[idx, 0]) for idx in range(1, d.shape[0] // 5)})"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "d = np.asarray(data[nd2_filename][pos][\"traces\"][\"mean\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = d[idx] / d[idx, 0]\n",
-    "fy = exp_fit(y)\n",
-    "plt.plot(y)\n",
-    "plt.plot(fy)"
+    "## Browse residuals"
    ]
   },
   {
@@ -216,13 +212,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output max_frames=2000\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        t: hv.Image(\n",
+    "            segmentation.get_nd2_frame(nd2_filename, pos, channel, t, memmap=True)[\n",
+    "                y_min:y_max, x_min:x_max\n",
+    "            ]\n",
+    "        )\n",
+    "        for t in range(0, 200, 1)\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = d[idx] / d[idx, 0]\n",
+    "fy = exp_fit(y)\n",
+    "plt.plot(y)\n",
+    "plt.plot(fy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spatial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%output size=200\n",
-    "hv.HoloMap({idx: hv.Curve(d[idx] / d[idx, 0]) for idx in range(1, d.shape[0] // 5)})"
+    "cmap = \"bmy\"\n",
+    "residual_std = [\n",
+    "    np.nanstd(d[idx] / d[idx, 0] - exp_fit(d[idx])) for idx in range(1, d.shape[0])\n",
+    "]\n",
+    "# colors = 1/d[1:,0]\n",
+    "colors = residual_std  # regionprops['centroid_x']\n",
+    "# swap and flip coordinates to follow RevImage convention\n",
+    "regionprops[\"x\"] = regionprops[\"centroid_y\"]\n",
+    "regionprops[\"y\"] = regionprops[\"centroid_x\"]\n",
+    "regionprops[\"color\"] = colors\n",
+    "xy_plot = hv.Points(regionprops, kdims=[\"x\", \"y\"], vdims=[\"color\"]).options(\n",
+    "    color=hv.dim(\"color\"), size=7, cmap=cmap\n",
+    ")\n",
+    "xy_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old"
    ]
   },
   {
