More playing around with residuals.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190523 JQS flicker debugging.ipynb
@@ -111,10 +111,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filename = '/n/groups/paulsson/jqs1/molecule-counting/190522photobleaching_noflatcorr_test1.pickle'\n",
     "filename = (\n",
-    "    \"/n/groups/paulsson/jqs1/molecule-counting/190521photobleaching_noflatcorr.pickle\"\n",
-    ")"
+    "    \"/n/groups/paulsson/jqs1/molecule-counting/190405photobleaching_noflatcorr.pickle\"\n",
+    ")\n",
+    "# filename = '/n/groups/paulsson/jqs1/molecule-counting/190521photobleaching_noflatcorr.pickle'\n",
+    "# filename = '/n/groups/paulsson/jqs1/molecule-counting/190522photobleaching_noflatcorr_test1.pickle'\n",
+    "# filename = '/n/groups/paulsson/jqs1/molecule-counting/190523photobleaching_noflatcorr_flickerdebug.pickle'\n",
+    "# filename = '/n/groups/paulsson/jqs1/molecule-counting/190523photobleaching_noflatcorr_flickerdebug_ti5.pickle'"
    ]
   },
   {
@@ -139,27 +142,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2_filename = \"/n/scratch2/jqs1/190508/GFP_100ms_100pct.nd2\"\n",
-    "channel = \"FITC\"\n",
-    "# nd2_filename = '/n/scratch2/jqs1/190507/mkate_100ms_100pct.nd2'\n",
+    "list(data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nd2_filename = '/n/scratch2/jqs1/190508/GFP_100ms_80pct.nd2'\n",
+    "# channel = 'FITC'\n",
+    "# nd2_filename = '/n/scratch2/jqs1/190507/mkate_100ms_50pct.nd2'\n",
     "# channel = 'mCherry'\n",
-    "idx = 91\n",
-    "pos = 1\n",
-    "d = np.asarray(data[nd2_filename][pos][\"traces\"][\"mean\"])\n",
+    "# nd2_filename = '/n/scratch2/jqs1/190523/GFP_100ms_100pct_3.nd2'\n",
+    "# channel = 'GFP'\n",
+    "# nd2_filename = '/n/scratch2/jqs1/190523/mkate_100ms_50pct_3.nd2'\n",
+    "# channel = 'mCherry'\n",
+    "# nd2_filename = '/n/scratch2/jqs1/190523/mkate_100ms_50pct_ti5.nd2'\n",
+    "nd2_filename = (\n",
+    "    \"/n/scratch2/jqs1/fidelity/190313/fluorescence/190313_mkate_100ms_100pct_laser.nd2\"\n",
+    ")\n",
+    "channel = \"mCherry\"\n",
+    "pos = 0\n",
+    "d = np.asarray(data[nd2_filename][pos][\"traces\"][\"mean\"])[:, 200:]\n",
     "regionprops = data[nd2_filename][pos][\"regionprops\"]\n",
     "seg_frame = np.asarray(data[nd2_filename][pos][\"segmentation_frame\"])\n",
-    "label_frame = np.asarray(data[nd2_filename][pos][\"labels\"])\n",
-    "y, x = regionprops.loc[idx, :][[\"centroid_x\", \"centroid_y\"]]\n",
-    "s = 10\n",
-    "x_lim = y_lim = 2048\n",
-    "x, y = int(x), int(y)\n",
-    "x_min = max(x - s, 0)\n",
-    "x_max = min(x + s, x_lim)\n",
-    "y_min = max(y - s, 0)\n",
-    "y_max = min(y + s, y_lim)\n",
-    "t_max = d.shape[1]\n",
-    "seg = seg_frame[y_min:y_max, x_min:x_max]\n",
-    "labels = label_frame[y_min:y_max, x_min:x_max]"
+    "label_frame = np.asarray(data[nd2_filename][pos][\"labels\"])"
    ]
   },
   {
@@ -186,7 +195,7 @@
    "outputs": [],
    "source": [
     "%%output size=200\n",
-    "hv.HoloMap({idx: hv.Curve(d[idx] / d[idx, 0]) for idx in range(1, d.shape[0] // 5)})"
+    "hv.HoloMap({idx: hv.Curve(d[idx] / d[idx, 0]) for idx in range(1, d.shape[0] // 10)})"
    ]
   },
   {
@@ -206,7 +215,7 @@
     "hv.HoloMap(\n",
     "    {\n",
     "        idx: hv.Curve(d[idx] / d[idx, 0] - exp_fit(d[idx]))\n",
-    "        for idx in range(1, d.shape[0] // 5)\n",
+    "        for idx in range(1, d.shape[0] // 10)\n",
     "    }\n",
     ")"
    ]
@@ -224,6 +233,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "idx = 53\n",
+    "y, x = regionprops.loc[idx, :][[\"centroid_x\", \"centroid_y\"]]\n",
+    "s = 10\n",
+    "x_lim = y_lim = 2048\n",
+    "x, y = int(x), int(y)\n",
+    "x_min = max(x - s, 0)\n",
+    "x_max = min(x + s, x_lim)\n",
+    "y_min = max(y - s, 0)\n",
+    "y_max = min(y + s, y_lim)\n",
+    "t_max = d.shape[1]\n",
+    "seg = seg_frame[y_min:y_max, x_min:x_max]\n",
+    "labels = label_frame[y_min:y_max, x_min:x_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%output max_frames=2000\n",
     "hv.HoloMap(\n",
     "    {\n",
@@ -232,9 +261,16 @@
     "                y_min:y_max, x_min:x_max\n",
     "            ]\n",
     "        )\n",
-    "        for t in range(0, 200, 1)\n",
+    "        for t in range(300, 400, 1)\n",
     "    }\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Residuals"
    ]
   },
   {
@@ -247,6 +283,41 @@
     "fy = exp_fit(y)\n",
     "plt.plot(y)\n",
     "plt.plot(fy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(18, 12))\n",
+    "residuals = np.array(\n",
+    "    [d[idx] / d[idx, 0] - exp_fit(d[idx]) for idx in range(1, d.shape[0])]\n",
+    ")\n",
+    "# plt.plot((residuals[1]+residuals[-222]+residuals[-500])/3)\n",
+    "plt.plot(residuals[-10])\n",
+    "plt.plot(np.nanmean(residuals[:50], axis=0))\n",
+    "plt.plot(np.nanmean(residuals[: len(residuals) // 2], axis=0))\n",
+    "plt.plot(np.nanmean(residuals[len(residuals) // 2 :], axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot((residuals - np.nanmean(residuals, axis=0))[:3].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.nanmean(np.abs(residuals - np.nanmean(residuals, axis=0)), axis=0))"
    ]
   },
   {
@@ -268,7 +339,7 @@
     "    np.nanstd(d[idx] / d[idx, 0] - exp_fit(d[idx])) for idx in range(1, d.shape[0])\n",
     "]\n",
     "# colors = 1/d[1:,0]\n",
-    "colors = residual_std  # regionprops['centroid_x']\n",
+    "colors = residual_std  # *d[1:,0]#regionprops['centroid_x']\n",
     "# swap and flip coordinates to follow RevImage convention\n",
     "regionprops[\"x\"] = regionprops[\"centroid_y\"]\n",
     "regionprops[\"y\"] = regionprops[\"centroid_x\"]\n",
