--- a/paulssonlab/src/paulssonlab/shenker/fp-analysis/190528 FP analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/fp-analysis/190528 FP analysis.ipynb
@@ -17,8 +17,99 @@
     "from cytoolz import *\n",
     "import hvplot.pandas\n",
     "import scipy\n",
+    "import re\n",
+    "import os\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "IDX = pd.IndexSlice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RevImage(img, **kwargs):\n",
+    "    return _RevImage(hv.Image, img, **kwargs)\n",
+    "\n",
+    "\n",
+    "def _RevImage(cls, img, **kwargs):\n",
+    "    return cls(img[::-1], bounds=(0, 0, img.shape[1], img.shape[0])).options(\n",
+    "        invert_yaxis=True\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def _horiz_trench_img(img):\n",
+    "    return RevImage(img.T).options(backend=\"bokeh\", height=120, width=400)\n",
+    "\n",
+    "\n",
+    "def _trench_img(img):\n",
+    "    return RevImage(img).options(backend=\"bokeh\", height=400, width=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _load_measurements(base_filename, kind):\n",
+    "    labelwise_filename = base_filename + \".{}.parquet\".format(kind)\n",
+    "    if not os.path.exists(labelwise_filename):\n",
+    "        return\n",
+    "    with pa.OSFile(labelwise_filename, \"rb\") as f:\n",
+    "        res = pq.ParquetFile(f).read(use_pandas_metadata=True, use_threads=False)\n",
+    "    res = res.to_pandas()\n",
+    "    return res\n",
+    "    # labelwise_df = data_io.read_parquet(labelwise_filename, progress_bar=None)\n",
+    "    # mask_labelwise_df = data_io.read_parquet(base_filename+'.mask_labelwise.parquet')\n",
+    "    # trenchwise_df = data_io.read_parquet(base_filename+'.trenchwise.parquet')\n",
+    "    # return labelwise_df#.to_pandas()\n",
+    "\n",
+    "\n",
+    "def load_measurements(\n",
+    "    parquet_filename, nthreads=False, progress_bar=tqdm, filename=None\n",
+    "):\n",
+    "    positions = [\n",
+    "        re.match(r\".*pos(\\d+)\\.labelwise\\.parquet\", path)\n",
+    "        for path in os.listdir(parquet_filename)\n",
+    "    ]\n",
+    "    positions = [int(m.group(1)) for m in positions if m is not None]\n",
+    "    print(positions)\n",
+    "    if progress_bar is not None:\n",
+    "        positions = progress_bar(positions, total=len(positions))\n",
+    "    res = {}\n",
+    "    for pos in positions:\n",
+    "        key = (filename, pos)\n",
+    "        base_filename = os.path.join(parquet_filename, \"pos{:d}\".format(pos))\n",
+    "        # res[key] = _load_measurements(base_filename, kind)\n",
+    "        labelwise_filename = base_filename + \".labelwise.parquet\"  # .format(kind)\n",
+    "        if not os.path.exists(labelwise_filename):\n",
+    "            continue\n",
+    "        with pa.OSFile(labelwise_filename, \"rb\") as f:\n",
+    "            labelwise_df = pq.ParquetFile(f).read(\n",
+    "                use_pandas_metadata=True, use_threads=False\n",
+    "            )\n",
+    "        labelwise_df = labelwise_df.to_pandas()\n",
+    "        res[key] = labelwise_df\n",
+    "    return sorted(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dat = load_measurements(nd2_filename+'.measurements')"
    ]
   },
   {
@@ -34,8 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# nd2_filename = '/home/jqs1/scratch/190504/basilisk/190504_YFP_mScarlet_repressilators002.nd2'\n",
     "nd2_filename = (\n",
-    "    \"/home/jqs1/scratch/190504/basilisk/190504_YFP_mScarlet_repressilators002.nd2\"\n",
+    "    \"/home/jqs1/scratch/190504/basilisk/190504_YFP_mScarlet_repressilators_fast.nd2\"\n",
     ")"
    ]
   },
@@ -60,21 +152,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dat.loc[IDX[1, 62, :, 1], (\"YFP\", \"noerode\", \"mean\")].rename(\"h\").reset_index().hvplot(\n",
-    "    \"t\", \"h\"\n",
-    ") * dat.loc[IDX[1, 62, :, 1], (\"mCherry\", \"noerode\", \"mean\")].rename(\n",
-    "    \"h\"\n",
-    ").reset_index().hvplot(\n",
-    "    \"t\", \"h\"\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +165,7 @@
    "outputs": [],
    "source": [
     "root = zarr.open_group(\n",
-    "    store=zarr.LMDBStore(nd2_filename + \".images/pos176.zarr\", readonly=True)\n",
+    "    store=zarr.LMDBStore(nd2_filename + \".images/pos177.zarr\", readonly=True)\n",
     ")"
    ]
   },
@@ -99,7 +176,7 @@
    "outputs": [],
    "source": [
     "trench_set = 1\n",
-    "trench_idx = 62\n",
+    "trench_idx = 61\n",
     "raw_stack = np.asarray(root[\"raw\"][trench_set][trench_idx][\"CFP\"])\n",
     "label_stack = np.asarray(root[\"segmentation\"][trench_set][trench_idx][\"CFP\"])"
    ]
@@ -110,7 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_stack.shape"
+    "t = 0\n",
+    "_trench_img(raw_stack[:, :, t]) + _trench_img(label_stack[:, :, t]).redim(z=\"label\")"
    ]
   },
   {
@@ -119,46 +197,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(raw_stack[:, :, 14])"
+    "(\n",
+    "    hv.HoloMap({t: _trench_img(raw_stack[:, :, t]) for t in range(raw_stack.shape[-1])})\n",
+    "    + hv.HoloMap(\n",
+    "        {\n",
+    "            t: _trench_img(label_stack[:, :, t]).redim(z=\"label\")\n",
+    "            for t in range(raw_stack.shape[-1])\n",
+    "        }\n",
+    "    )\n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.HoloMap({t: hv.Image(np.random.random((10, 10))) for t in range(2)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=200\n",
-    "hv.HoloMap({t: hv.Image(raw_stack[:, :, t]) for t in range(raw_stack.shape[-1] // 10)})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%opts Image {+framewise}\n",
-    "hv.HoloMap(\n",
-    "    {t: hv.Image(raw_stack[:, :, t]) for t in range(raw_stack.shape[-1])}\n",
-    ") + hv.HoloMap({t: hv.Image(label_stack[:, :, t]) for t in range(raw_stack.shape[-1])})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
