--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
@@ -81,11 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-05-13_bacillus_training_data\"\n",
+    "headpath = \"/n/scratch2/de64/2019-05-31_Bacillus_training_data_mneongreen\"\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    headpath, [\"channel_RFP\"], [0, 1, 23], t_subsample_step=10\n",
+    "    headpath, [\"channel_GFP\", \"channel_Phase\"], [1, 21, 36], t_subsample_step=20\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
+    "\n",
+    "# headpath = '/n/scratch2/de64/full_pipeline_test'\n",
+    "# kymo = tr.interactive.kymograph_interactive(headpath,[\"channel_RFP\",\"channel_BF\"],[60],t_subsample_step=5)\n",
+    "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
     "\n",
     "# input_path_prefix = '/n/scratch2/de64/full_pipeline_test/hdf5/fov_'\n",
     "# # kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
@@ -155,10 +159,10 @@
     "    kymo.preview_y_precentiles,\n",
     "    {\"manual\": True},\n",
     "    imported_array_list=fixed(imported_array_list),\n",
-    "    y_percentile=IntSlider(value=95, min=0, max=100, step=1),\n",
+    "    y_percentile=IntSlider(value=88, min=0, max=100, step=1),\n",
     "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=20, step=1),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    triangle_scaling=FloatSlider(value=1.6, min=0.0, max=2.0, step=0.05),\n",
+    "    triangle_scaling=FloatSlider(value=1.05, min=0.0, max=2.0, step=0.05),\n",
     ")\n",
     "display(row_detection)"
    ]
@@ -225,7 +229,7 @@
     "    y_percentiles_smoothed_list=fixed(y_percentiles_smoothed_list),\n",
     "    imported_array_list=fixed(imported_array_list),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    triangle_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.05),\n",
+    "    triangle_scaling=FloatSlider(value=1.05, min=0.0, max=2.0, step=0.05),\n",
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
@@ -314,10 +318,10 @@
     "    cropped_in_y_list=fixed(cropped_in_y_list),\n",
     "    t=IntSlider(value=0, min=0, max=cropped_in_y_list[0].shape[4] - 1, step=1),\n",
     "    x_percentile=IntSlider(value=85, min=50, max=100, step=1),\n",
-    "    background_kernel_x=IntSlider(value=301, min=1, max=601, step=20),\n",
+    "    background_kernel_x=IntSlider(value=21, min=1, max=601, step=20),\n",
     "    smoothing_kernel_x=IntSlider(value=9, min=1, max=31, step=2),\n",
     "    otsu_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    otsu_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.01),\n",
+    "    otsu_scaling=FloatSlider(value=0.25, min=0.0, max=2.0, step=0.01),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
     ")\n",
     "display(trench_detection)"
@@ -409,6 +413,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrected_midpoints = interactive(\n",
+    "    kymo.preview_corrected_midpoints,\n",
+    "    {\"manual\": True},\n",
+    "    all_midpoints_list=fixed(all_midpoints_list),\n",
+    "    x_drift_list=fixed(x_drift_list),\n",
+    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=1),\n",
+    "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
+    "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
+    ")\n",
+    "display(corrected_midpoints)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -438,6 +460,7 @@
     "    all_midpoints_list=fixed(all_midpoints_list),\n",
     "    x_drift_list=fixed(x_drift_list),\n",
     "    trench_width_x=IntSlider(value=30, min=10, max=50, step=1),\n",
+    "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
    ]
@@ -475,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
