--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_fluo_seg.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Interactive_fluo_seg.ipynb
@@ -61,10 +61,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-05-13_bacillus_training_data\"\n",
-    "seg_channel = \"channel_RFP\"\n",
+    "# headpath = '/n/scratch2/de64/full_pipeline_test/'\n",
+    "# seg_channel = 'channel_RFP'\n",
     "\n",
-    "inter = tr.interactive.fluo_segmentation_interactive(headpath, seg_channel)"
+    "headpath = \"/n/scratch2/de64/2019-05-31_Bacillus_training_data_mneongreen/\"\n",
+    "seg_channel = \"channel_GFP\"\n",
+    "\n",
+    "inter = tr.interactive.fluo_segmentation_interactive(headpath, seg_channel, wrap_pad=0)"
    ]
   },
   {
@@ -260,8 +263,16 @@
     "        description=\"Cell Mask Thresholding Method:\",\n",
     "        disabled=False,\n",
     "    ),\n",
+    "    global_otsu_scaling=FloatSlider(\n",
+    "        value=0.95,\n",
+    "        description=\"Global Threshold Scaling:\",\n",
+    "        min=0.0,\n",
+    "        max=2.0,\n",
+    "        step=0.01,\n",
+    "        disabled=False,\n",
+    "    ),\n",
     "    cell_otsu_scaling=FloatSlider(\n",
-    "        value=0.85,\n",
+    "        value=0.95,\n",
     "        description=\"Cell Threshold Scaling:\",\n",
     "        min=0.0,\n",
     "        max=2.0,\n",
@@ -314,11 +325,19 @@
     "    eigval_list=fixed(eigval_list),\n",
     "    cell_mask_list=fixed(cell_mask_list),\n",
     "    edge_threshold_scaling=FloatSlider(\n",
-    "        value=0.9,\n",
+    "        value=1.0,\n",
     "        description=\"Edge Threshold Scaling\",\n",
     "        min=0.0,\n",
     "        max=2.0,\n",
     "        step=0.01,\n",
+    "        disabled=False,\n",
+    "    ),\n",
+    "    min_obj_size=IntSlider(\n",
+    "        value=30,\n",
+    "        description=\"Minimum Object Size:\",\n",
+    "        min=0,\n",
+    "        max=100,\n",
+    "        step=2,\n",
     "        disabled=False,\n",
     "    ),\n",
     ")\n",
@@ -377,6 +396,14 @@
     "        step=1,\n",
     "        disabled=False,\n",
     "    ),\n",
+    "    min_obj_size=IntSlider(\n",
+    "        value=30,\n",
+    "        description=\"Minimum Object Size:\",\n",
+    "        min=0,\n",
+    "        max=100,\n",
+    "        step=2,\n",
+    "        disabled=False,\n",
+    "    ),\n",
     ")\n",
     "display(conv_scores_list_int)"
    ]
@@ -414,7 +441,7 @@
     "    {\"manual\": True},\n",
     "    conv_scores_list=fixed(conv_scores_list),\n",
     "    convex_threshold=FloatSlider(\n",
-    "        value=0.9,\n",
+    "        value=0.75,\n",
     "        description=\"Convexity Threshold:\",\n",
     "        min=0.0,\n",
     "        max=1.0,\n",
@@ -458,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
