Updated pre-commit hooks, conda env. Jupyter notebooks now formatted with black.

--- a/paulssonlab/src/paulssonlab/shenker/fp-analysis/190612 FP analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/fp-analysis/190612 FP analysis.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def RevImage(img, **kwargs):\n",
@@ -42,17 +44,23 @@
     "\n",
     "\n",
     "def _RevImage(cls, img, **kwargs):\n",
+    "    # TODO: bug in holoviews/bokeh aspect ratio handling, you need data_aspect=(height/width)**2 instead of 1\n",
+    "    # TODO: I think datashader is doing this correctly, but the original Image display screws up the frame dimensions\n",
+    "    # return cls(img[::-1], bounds=(0,0,img.shape[1],img.shape[0])).options(invert_yaxis=True, data_aspect=(img.shape[1]/img.shape[0])**2, width=400)#, responsive=False)\n",
     "    return cls(img[::-1], bounds=(0, 0, img.shape[1], img.shape[0])).options(\n",
-    "        invert_yaxis=True\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _horiz_trench_img(img):\n",
-    "    return RevImage(img.T).options(backend=\"bokeh\", height=120, width=400)\n",
+    "        aspect=img.shape[1] / img.shape[0], width=250\n",
+    "    )  # , responsive=False)\n",
     "\n",
     "\n",
     "def _trench_img(img):\n",
-    "    return RevImage(img).options(backend=\"bokeh\", height=400, width=120)"
+    "    return RevImage(img.T)\n",
+    "\n",
+    "\n",
+    "# def _horiz_trench_img(img):\n",
+    "#     return RevImage(img.T).options(backend='bokeh', height=120, width=400)\n",
+    "\n",
+    "# def _trench_img(img):\n",
+    "#     return RevImage(img).options(backend='bokeh', height=400, width=120)"
    ]
   },
   {
@@ -140,7 +148,7 @@
    "outputs": [],
    "source": [
     "dat = pq.read_pandas(\n",
-    "    nd2_filename + \".measurements/pos177.labelwise.parquet\"\n",
+    "    nd2_filename + \".measurements/pos172.labelwise.parquet\"\n",
     ").to_pandas()"
    ]
   },
@@ -167,7 +175,7 @@
    "outputs": [],
    "source": [
     "root = zarr.open_group(\n",
-    "    store=zarr.LMDBStore(nd2_filename + \".images/pos177.zarr\", readonly=True)\n",
+    "    store=zarr.LMDBStore(nd2_filename + \".images/pos172.zarr\", readonly=True)\n",
     ")"
    ]
   },
@@ -178,7 +186,7 @@
    "outputs": [],
    "source": [
     "trench_set = 1\n",
-    "trench_idx = 61\n",
+    "trench_idx = 20\n",
     "raw_stack = np.asarray(root[\"raw\"][trench_set][trench_idx][\"CFP\"])\n",
     "label_stack = np.asarray(root[\"segmentation\"][trench_set][trench_idx][\"CFP\"])"
    ]
@@ -190,7 +198,7 @@
    "outputs": [],
    "source": [
     "t = 0\n",
-    "_trench_img(raw_stack[:, :, t]) + _trench_img(label_stack[:, :, t]).redim(z=\"label\")"
+    "RevImage(raw_stack[:, :, t]) + RevImage(label_stack[:, :, t]).redim(z=\"label\")"
    ]
   },
   {
