--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -29,8 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !mkdir /n/scratch2/de64/2019-05-31_Bacillus_training_data_mneongreen\n",
-    "!sbatch -p transfer -t 0-12:00 --wrap=\"rsync -r /n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-05-31_Bacillus_training_data_mneongreen/exp_folder/ /n/scratch2/de64/2019-05-31_Bacillus_training_data_mneongreen\""
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-06-18_DE85_training_data\"\n",
+    "targetdir = \"/n/scratch2/de64/2019-06-18_DE85_training_data\"\n",
+    "tr.cluster.transferjob(sourcedir, targetdir)"
    ]
   },
   {
@@ -204,7 +205,7 @@
     "    padding_y=40,\n",
     "    trench_width_x=23,\n",
     "    t_chunk=100,\n",
-    "    t_range=(0, -1),\n",
+    "    t_range=(0, None),\n",
     "    y_percentile=88,\n",
     "    y_min_edge_dist=80,\n",
     "    smoothing_kernel_y=(17, 1),\n",
@@ -253,78 +254,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kymo.dask_full_kymograph(dask_controller)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.kymo_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# fov_list = list(range(0,80))\n",
-    "fov_list = list(range(0, 40))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.mapfovs(kymo.generate_kymograph, fov_list, retries=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo.generate_kymograph(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo.collect_metadata(fov_list, use_archive=False, overwrite_archive=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo.collect_metadata(fov_list, use_archive=True, overwrite_archive=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Reorganize hdf5 structure\n",
-    "\n",
-    "Proceed to this step after finalizing kymograph extraction to reorganize hdf5 stucture such that datasets are specified by the global dataset-defined trenchid, which can be found in the kymograph metadata."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.mapfovs(kymo.reorg_kymographs, fov_list, retries=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run after previous line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo.cleanup_kymographs()"
+    "# fov_list = list(range(0,40))\n",
+    "# dask_controller.mapfovs(kymo.generate_kymograph,fov_list,retries=1)\n",
+    "# kymo.generate_kymograph(30)\n",
+    "# kymo.collect_metadata(fov_list,use_archive=False,overwrite_archive=True)\n",
+    "# kymo.collect_metadata(fov_list,use_archive=True,overwrite_archive=False)\n",
+    "# dask_controller.mapfovs(kymo.reorg_kymographs,fov_list,retries=1)\n",
+    "# kymo.cleanup_kymographs()"
    ]
   },
   {
